--- a/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
+++ b/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
@@ -51,21 +51,22 @@
             <li class="title">Table of contents: </li>
 
             
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Target Inference</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Workflow Pipeline</a></li>
              <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
-            <!--  <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>-->
+            
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway Analysis</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#target_int">Target Inference</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
             <!--  
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity to known drug- and knockdown-induced expression signatures</a></li>
             
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#cor_analysis">Public domain screening</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#pt_analysis">Scoring of potential targets</a></li>
-            
+             -->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
-            -->
+           
           </ul>
           
           {%if report.input_data_text%}
@@ -398,7 +399,7 @@
 
 <hr/>
 
-<h2>Target Inference</h2>
+<h2 id='target_int'>Target Inference</h2>
 <center>
 <button type="button"  class="btn btn-success btn-lg center" id='btn_show_ti'>Show Data</button>
 </center>
@@ -595,38 +596,21 @@
         <div class="menu">
           <ul class="list-unstyled" style='margin-top: 0;'>
             <li class="title">Table of contents: </li>
-            <!-- 
-            {%if report.input_data_text%}
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
-            {%endif%}
-            {%if report.methods_text%}
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#methods">Methods</a></li>
-            {%endif%}
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Workflow Pipeline</a></li>
+             <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway analysis</a></li>
-            {%if report.conclusion_text%}
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Conclusions</a></li>
-            {%endif%}
-            {%if report.references_text%}
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#references">References</a></li>
-            {%endif%}
             
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#dl_analysis">Deep Learning</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#kinetic_analysis">Kinetic pathway modeling</a></li>
-            
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway Analysis</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#target_int">Target Inference</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
+            <!--  
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sim_analysis">Similarity to known drug- and knockdown-induced expression signatures</a></li>
             
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#cor_analysis">Public domain screening</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#pt_analysis">Scoring of potential targets</a></li>
-            
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
              -->
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
-            <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#tf_analysis">Transcription Factor Analysis</a></li>
-            -->
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway Analysis</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ds_analysis">Drug Scoring</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#conclusions">Discussion</a></li>
           </ul>
           <br/><br/>
         </div>
