--- a/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
+++ b/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
@@ -1074,9 +1074,8 @@ $("#tbl-ds").DataTable( {
                {extend: 'print', title: 'tarinfer'}
                
           ],
-            	      
     
-},"deferRender": true });
+    "deferRender": true });
     
  /* METABOLIC PATHs
   drawPathwayTable({{report.id}},
