--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -396,6 +396,7 @@
 
 
 <!-- ---------------------------------Drug Scoring--------------------------------------------- -->
+{% if report.count_ds_groups > 0 %} 
  <hr/> 
 <h2 id='ds_analysis'>Drug Scoring</h2>
 <hr/>
@@ -516,6 +517,7 @@
    
 
 </div> <!--  end of hide div -->
+{%endif%}
 <!-- End of DS -->
 
 
