fix report datatables 4 paths

--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -1455,6 +1455,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             "info":     false,
             "dom": 'Bfrtip',
             "scrollX": true,
+            "bAutoWidth": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
