--- a/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
@@ -445,7 +445,7 @@
   
   <div role="tabpanel" class="tab-pane fade  " id="mms_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN HIGHT SM</h4>
-    <table id="tbl-mhs" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:100%;'>
+    <table id="tbl-mms" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:100%;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
