--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -393,7 +393,7 @@
   
   </div>
   
-<h3>Samples with MESENTERY_3</h3>
+<h3>Samples with MESENTERY_3 > 0</h3>
 <hr/> 
 
 <!-- Signaling Pathways level comparison Nav tabs -->
